--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
+    "request": "2.85.0",
     "mocha": "^5.0.2",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1"
