--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.15.5",
+    "ejs": "^2.5.7",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "ip": "^1.1.5",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
