--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,10 @@ env:
   -MY_SQL_PASS=test
 
 before_install:
-  - echo -e "USE mysql;\nUPDATE user SET password=PASSWORD($MY_SQL_PASS) WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+  - echo -e "USE mysql;\nUPDATE user SET password=PASSWORD('test') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - cd Databases
-  - echo -e "DynamicBusSchedulingServer\n$MY_SQL_USER\n$MY_SQL_PASS\$MY_SQL_PASS\n" | bash makeDB.sh
-  - mysql -u${MY_SQL_USER} -p${MY_SQL_PASS} < ./DB_Mock_Contents/map1.sql
+  - echo -e "DynamicBusSchedulingServer\ntest\ntest\ntest\n" | bash makeDB.sh
+  - mysql -utest -ptest < ./DB_Mock_Contents/map1.sql
 
 before_script:
   - sleep 5
