--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./dynamicBusNodeServer/bin/www",
-    "test": "mocha --timeout 10000 --exit"
+    "test": "nyc --reporter=html --reporter=text mocha --exit --timeout 10000",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -18,9 +19,11 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "request": "2.85.0",
-    "mocha": "^5.0.2",
     "chai": "^3.5.0",
-    "chai-http": "^2.0.1"
+    "chai-http": "^2.0.1",
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^5.0.2",
+    "request": "2.85.0"
   }
 }
