--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.2",
+    "nyc": "^11.6.0",
     "request": "2.85.0"
   }
 }
