--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5",
-    "socket.io": "^2.0.4"
+    "seedrandom": "^2.4.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
